[gd_scene load_steps=4 format=3 uid="uid://drmkks3ukxuoa"]

[ext_resource type="Script" uid="uid://bcm5hsja8k8x1" path="res://Weapons/Rifle/RifleWeaponScript.gd" id="1_1f4n5"]
[ext_resource type="PackedScene" uid="uid://c0ft3yvf54gm2" path="res://Weapons/Rifle/Scifi Assault Rifle-JqdHbURERk.glb" id="1_cpa1f"]
[ext_resource type="PackedScene" uid="uid://bg1dgfftkstv4" path="res://Bullets/bullet.tscn" id="2_2gd4j"]

[node name="RifleWeapon" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_1f4n5")
bullet_scene = ExtResource("2_2gd4j")

[node name="Model" parent="." instance=ExtResource("1_cpa1f")]

[node name="BulletSpawnPoint" type="Node3D" parent="Model"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.763286, 0.276263, 0)

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
